# lm_rlhf_abinit

./: .gitignore  README.md  pyproject.toml
configs/: gpt2_sst2.py
scripts/: sft.py
src/lm_rlhf_abinit/: __init__.py
src/lm_rlhf_abinit/datasets/: hf_dsets.py
src/lm_rlhf_abinit/utils/: config.py  tokenization.py
